--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Random Messages",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "Juan Gaviria <juan.gaviria@kommit.co>",
@@ -12,5 +12,11 @@
   "bin": {
     "random-jg-msg": "./bin/global.js"
   },
-  "preferGlobal": true
+  "preferGlobal": true,
+  "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.5",
+    "babel-jest": "^27.0.2",
+    "jest": "^27.0.4"
+  }
 }
